--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 	<!-- header-end -->
   <div class="container-fluid">
   	<div class="row">
-		<div class="info-corner main-info">
+		<div class="info-corner main-info ">
 			<div class="closer">
 				<img src="img/close.png" alt="">
 			</div>
@@ -160,6 +160,7 @@
 		<h2>новини <div ></div></h2>
 		<div class="row">
 			<div class="col-lg-6 big-pic">
+				<a href="">
 				<div>
 					<img src="img/rae-tian-502320-unsplash.png" alt="">
 					<div class="signature">
@@ -169,42 +170,50 @@
 					</div>
 					</div>
 				</div>
+				</a>
 			</div>
+			
 			<div class="col-lg-6 sm-pic">
 				<div class="row">
 					<div class="col-lg-12">
-						<div>
-							<img src="img/pascal-muller-151589-unsplash.png" alt="">
-							<div class="signature">
+				    	<a href="">
 							<div>
-								<p>День пам′яті героїв Небесної Сотні</p>
-								<div class="date"><div></div>04 березня 2019</div>
+								<img src="img/pascal-muller-151589-unsplash.png" alt="">
+								<div class="signature">
+									<div>
+										<p>День пам′яті героїв Небесної Сотні</p>
+										<div class="date"><div></div>04 березня 2019</div>
+									</div>
+								</div>
 							</div>
+						</a>
 					</div>
+						<div class="col-md-6 sm-news ">
+					   		 <a href="">
+								<div>
+									<img src="img/roman-kraft-266787-unsplash.png" alt="">
+									<div class="signature">
+										<div>	
+											<p>Ланцюг Єдності</p>
+											<div class="date"><div></div>04 березня 2019</div>
+										</div>
+									</div>
+								</div>
+							</a>
 						</div>
-					</div>
-					<div class="col-md-6 sm-news ">
-						<div>
-							<img src="img/roman-kraft-266787-unsplash.png" alt="">
-							<div class="signature">
-							<div>	
-								<p>Ланцюг Єдності</p>
-								<div class="date"><div></div>04 березня 2019</div>
-							</div>
-					</div>
+						<div class="col-md-6 sm-news">
+							<a href="">
+								<div>
+									<img src="img/camilo-jimenez-1418006-unsplash.png" alt="">
+									<div class="signature">
+										<div>	
+											<p>Шкільний театр "Ляльковий формат"...</p>
+											<div class="date"><div></div>04 березня 2019</div>
+										</div>
+									</div>
+								</div>
+							</a>
 						</div>
-					</div>
-					<div class="col-md-6 sm-news">
-						<div>
-							<img src="img/camilo-jimenez-1418006-unsplash.png" alt="">
-							<div class="signature">
-							<div>	
-								<p>Шкільний театр "Ляльковий формат"...</p>
-								<div class="date"><div></div>04 березня 2019</div>
-							</div>
-					</div>
-						</div>
-					</div>
 				</div>
 			</div>
 		</div>
@@ -342,8 +351,9 @@
 
 
      <script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
+     <script type="text/javascript" src="js/jquery.sticky-kit.min.js"></script>
+
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
-        <script type="text/javascript" src="js/slick.min.js"></script>
           <script type="text/javascript" src="js/main.js"></script>
 
   </body>
