--- a/news-page.html
+++ b/news-page.html
@@ -38,6 +38,7 @@
       	<img class="info-btn" src="./img/Group.png" alt="">
 
     </div>
+    <div class="wrap">
     	<div class="info-corner">
     		<div class="closer">
 				<img src="img/close.png" alt="">
@@ -90,7 +91,7 @@
 <!-- main-part -->
 	<div class="container">
 		<div class="row content-row">
-			<div class="col-xl-4 offset-lg-3 offset-xl-0 "><h2>новини <div ></div></h2></div>
+			<div class="col-xl-4 offset-lg-3 offset-xl-1 "><h2>новини <div ></div></h2></div>
 			<div class="col-lg-10 offset-xl-2 offset-lg-2">
 				<div class="row">
 					<div class="col-lg-4 left-news-section">
@@ -270,23 +271,7 @@
 </nav>
 		</div>
 	</div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+</div>
 	<footer>
 	<div class="container">
 		<div class="row">
@@ -352,7 +337,7 @@
 
      <script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
-        <script type="text/javascript" src="js/slick.min.js"></script>
+          <script type="text/javascript" src="js/jquery.sticky-kit.min.js"></script>
           <script type="text/javascript" src="js/main.js"></script>
 
   </body>
