--- a/news-open.html
+++ b/news-open.html
@@ -121,7 +121,7 @@
 
      <script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
-        <script type="text/javascript" src="js/slick.min.js"></script>
+     <script type="text/javascript" src="js/jquery.sticky-kit.min.js"></script>
           <script type="text/javascript" src="js/main.js"></script>
 
   </body>
