--- a/news-page.html
+++ b/news-page.html
@@ -15,8 +15,7 @@
   <body class="news">
 <div class="container-fluid">
  <header class="header ">
- 	 		<div class="search-icon"><img src="img/search 2).png" alt=""></div>
-				<input class="top-search" type="text" placeholder="Введіть текст для пошуку">
+ 	 		<div class="search-icon search"><img src="img/search 2).png" alt=""></div>
             <nav class="nav d-flex align-items-center justify-content-between">
                 <div class="menu__btn"><span></span></div>
                 <ul class="menu">
@@ -35,6 +34,14 @@
                 </ul>
             </nav>
     </header>
+    						<div class="pop-up">
+										<img  class="close-pop-up" src="./img/close.png" alt="">
+										<h2>пошук</h2>
+										<form action="">
+											<input type="text">
+											<button type="submit" >шукати </button>
+										</form>
+							</div>
       	<img class="info-btn" src="./img/Group.png" alt="">
 
     </div>
@@ -91,7 +98,7 @@
 <!-- main-part -->
 	<div class="container">
 		<div class="row content-row">
-			<div class="col-xl-4 offset-lg-3 offset-xl-1 "><h2>новини <div ></div></h2></div>
+			<div class="col-xl-4  offset-lg-2 "><h2>новини <div ></div></h2></div>
 			<div class="col-lg-10 offset-xl-2 offset-lg-2">
 				<div class="row">
 					<div class="col-lg-4 left-news-section">
@@ -105,7 +112,7 @@
 				<div class="date">15 березня 2019</div>
 				<p>Курс уроків "Тверезе життя " розпочався у місті для школярів навчальних закладів.
 					На виконання Програми протидії вживання алкогольних та тютюнових виробів неповнолітніми
-					 та формування навичок здорового способу життя 28.02.2019р. для учнів 9-10 класів був...
+					 та формування навичок здорового способу ...
 				</p>
 				<a href=""><div class="news-btn">читати</div></a>
 				</div>
@@ -121,7 +128,7 @@
 				<div class="date">15 березня 2019</div>
 				<p>Курс уроків "Тверезе життя " розпочався у місті для школярів навчальних закладів.
 					На виконання Програми протидії вживання алкогольних та тютюнових виробів неповнолітніми
-					 та формування навичок здорового способу життя 28.02.2019р. для учнів 9-10 класів був...
+					 та формування навичок здорового способу ...
 				</p>
 				<a href=""><div class="news-btn">читати</div></a>
 				</div>
@@ -137,7 +144,7 @@
 				<div class="date">15 березня 2019</div>
 				<p>Курс уроків "Тверезе життя " розпочався у місті для школярів навчальних закладів.
 					На виконання Програми протидії вживання алкогольних та тютюнових виробів неповнолітніми
-					 та формування навичок здорового способу життя 28.02.2019р. для учнів 9-10 класів був...
+					 та формування навичок здорового способу ...
 				</p>
 				<a href=""><div class="news-btn">читати</div></a>
 				</div>
@@ -153,7 +160,7 @@
 				<div class="date">15 березня 2019</div>
 				<p>Курс уроків "Тверезе життя " розпочався у місті для школярів навчальних закладів.
 					На виконання Програми протидії вживання алкогольних та тютюнових виробів неповнолітніми
-					 та формування навичок здорового способу життя 28.02.2019р. для учнів 9-10 класів був...
+					 та формування навичок здорового способу ...
 				</p>
 				<a href=""><div class="news-btn">читати</div></a>
 				</div>
@@ -169,7 +176,7 @@
 				<div class="date">15 березня 2019</div>
 				<p>Курс уроків "Тверезе життя " розпочався у місті для школярів навчальних закладів.
 					На виконання Програми протидії вживання алкогольних та тютюнових виробів неповнолітніми
-					 та формування навичок здорового способу життя 28.02.2019р. для учнів 9-10 класів був...
+					 та формування навичок здорового способу ...
 				</p>
 				<a href=""><div class="news-btn">читати</div></a>
 				</div>
@@ -185,7 +192,7 @@
 				<div class="date">15 березня 2019</div>
 				<p>Курс уроків "Тверезе життя " розпочався у місті для школярів навчальних закладів.
 					На виконання Програми протидії вживання алкогольних та тютюнових виробів неповнолітніми
-					 та формування навичок здорового способу життя 28.02.2019р. для учнів 9-10 класів був...
+					 та формування навичок здорового способу ...
 				</p>
 				<a href=""><div class="news-btn">читати</div></a>
 				</div>
@@ -201,7 +208,7 @@
 				<div class="date">15 березня 2019</div>
 				<p>Курс уроків "Тверезе життя " розпочався у місті для школярів навчальних закладів.
 					На виконання Програми протидії вживання алкогольних та тютюнових виробів неповнолітніми
-					 та формування навичок здорового способу життя 28.02.2019р. для учнів 9-10 класів був...
+					 та формування навичок здорового способу ...
 				</p>
 				<a href=""><div class="news-btn">читати</div></a>
 				</div>
@@ -217,7 +224,7 @@
 				<div class="date">15 березня 2019</div>
 				<p>Курс уроків "Тверезе життя " розпочався у місті для школярів навчальних закладів.
 					На виконання Програми протидії вживання алкогольних та тютюнових виробів неповнолітніми
-					 та формування навичок здорового способу життя 28.02.2019р. для учнів 9-10 класів був...
+					 та формування навичок здорового способу ...
 				</p>
 				<a href=""><div class="news-btn">читати</div></a>
 				</div>
@@ -233,7 +240,7 @@
 				<div class="date">15 березня 2019</div>
 				<p>Курс уроків "Тверезе життя " розпочався у місті для школярів навчальних закладів.
 					На виконання Програми протидії вживання алкогольних та тютюнових виробів неповнолітніми
-					 та формування навичок здорового способу життя 28.02.2019р. для учнів 9-10 класів був...
+					 та формування навичок здорового способу ...
 				</p>
 				<a href=""><div class="news-btn">читати</div></a>
 				</div>
@@ -249,7 +256,7 @@
 				<div class="date">15 березня 2019</div>
 				<p>Курс уроків "Тверезе життя " розпочався у місті для школярів навчальних закладів.
 					На виконання Програми протидії вживання алкогольних та тютюнових виробів неповнолітніми
-					 та формування навичок здорового способу життя 28.02.2019р. для учнів 9-10 класів був...
+					 та формування навичок здорового способу ...
 				</p>
 				<a href=""><div class="news-btn">читати</div></a>
 				</div>
@@ -311,7 +318,7 @@
 				<input type="text" placeholder="Введіть текст для пошуку">
 				<button ></button>
 			</div>
-			<div class="footer-adress col-lg-7 col-md-5 offset-lg-4 offset-md-7">76000, м. Івано_Франківськ,
+			<div class="footer-adress col-lg-12 col-md-12 "><p>76000, м. Івано-Франківськ,</p>
 					вул. Івана-Павла ІІ, 24
 				</div>
 			</div>
