--- a/pride.html
+++ b/pride.html
@@ -16,7 +16,6 @@
 <div class="container-fluid">
  <header class="header ">
  		<div class="search-icon"><img src="img/search 2).png" alt=""></div>
-				<input class="top-search" type="text" placeholder="Введіть текст для пошуку">
 
             <nav class="nav d-flex align-items-center justify-content-between">
                 <div class="menu__btn"><span></span></div>
@@ -92,7 +91,7 @@
 	<!-- main-part -->
 	<div class="container">
 		<div class="row content-row">
-			<div class=" offset-lg-2 offset-xl-1 "><h2>Наша гордість <div ></div></h2></div>
+			<div class="col-4 offset-lg-2  "><h2>Наша гордість <div ></div></h2></div>
 			<div class="col-lg-10 offset-xl-2 offset-lg-2">
 				<div class="row">
 					<div class="col-lg-3">
