all pages are done

--- a/news-open.html
+++ b/news-open.html
@@ -14,8 +14,7 @@
   </head>
   <body class="news">
  <header class="header ">
- 	 		<div class="search-icon news-open-srch"><img src="img/search 2).png" alt=""></div>
-            <input class="top-search" type="text" placeholder="Введіть текст для пошуку">
+ 	 		<div class="search-icon news-open-srch search"><img src="img/search 2).png" alt=""></div>
 
             <nav class="nav d-flex align-items-center justify-content-between">
                 <div class="menu__btn"><span></span></div>
@@ -34,6 +33,14 @@
                 </ul>
             </nav>
     </header>
+    <div class="pop-up">
+                                        <img  class="close-pop-up" src="./img/close.png" alt="">
+                                        <h2>пошук</h2>
+                                        <form action="">
+                                            <input type="text">
+                                            <button type="submit" >шукати </button>
+                                        </form>
+                            </div>
     <div class="container">
         <div class="row">
             <div class="col-lg-12 news-open-title">
@@ -95,7 +102,7 @@
                 <input type="text" placeholder="Введіть текст для пошуку">
                 <button ></button>
             </div>
-            <div class="footer-adress col-lg-7 col-md-5 offset-lg-4 offset-md-7">76000, м. Івано_Франківськ,
+            <div class="footer-adress col-lg-12 col-md-12 "> <p> 76000, м. Івано-Франківськ,</p>
                     вул. Івана-Павла ІІ, 24
                 </div>
             </div>
