--- a/index.html
+++ b/index.html
@@ -54,15 +54,15 @@
 			<ul>
 				<li>
 					<img src="img/file (3).png" alt="">
-					Розклад уроків 1 - 4 класів
+					<a href="">Розклад уроків 1 - 4 класів </a>
 				</li>
 				<li>
 					<img src="img/file (3).png" alt="">
-					Розклад уроків 5 - 11 класів
+					<a href="">Розклад уроків 5 - 11 класів</a>
 				</li>
 				<li>
 					<img src="img/file (3).png" alt="">
-					Режим роботи школи
+					<a href="">Режим роботи школи</a>
 				</li>
 			</ul>
 		</div>
