--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
                     <li class="menu__item"><a href="#">Учнівське самоврядування</a></li>
                     <li class="menu__item"><a href="#">Протидія насильству</a></li>
                     <li class="menu__item"><a href="">Новини</a></li>
+                        <li class="search-menu"><div class="footer-search">
+				<div class="row">
+				<div class="col-lg-12 ">
+				<input type="text" placeholder="Введіть текст для пошуку">
+			</div></li>
                 </ul>
             </nav>
     </header>
